Change page title

--- a/report/books/index.html
+++ b/report/books/index.html
@@ -2,9 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Book Reports</title>
 </head>
 <body>
 <a href="https://venomousprimate.github.io/report/books/all_books_by_name.txt">All Books by Name</a>
+<a href="https://venomousprimate.github.io/report/books/completed_books_by_folder.txt">All Books by Name</a>
+<a href="https://venomousprimate.github.io/report/books/completed_books_by_length.txt">All Books by Name</a>
+<a href="https://venomousprimate.github.io/report/books/completed_books_by_name.txt">All Books by Name</a>
+<a href="https://venomousprimate.github.io/report/books/randomized_comic_reserved_titles.txt">All Books by Name</a>
+<a href="https://venomousprimate.github.io/report/books/randomized_queued_titles.txt">All Books by Name</a>
+<a href="https://venomousprimate.github.io/report/books/reserved_books_by_folder.txt">All Books by Name</a>
+<a href="https://venomousprimate.github.io/report/books/reserved_books_by_length.txt">All Books by Name</a>
+<a href="https://venomousprimate.github.io/report/books/reserved_books_by_name.txt">All Books by Name</a>
+<a href="https://venomousprimate.github.io/report/books/sanderstatus.txt">All Books by Name</a>
 </body>
 </html>
