--- a/report/books/index.html
+++ b/report/books/index.html
@@ -5,15 +5,15 @@
     <title>Book Reports</title>
 </head>
 <body>
-<a href="https://venomousprimate.github.io/report/books/all_books_by_name.txt">All Books by Name</a>
-<a href="https://venomousprimate.github.io/report/books/completed_books_by_folder.txt">All Books by Name</a>
-<a href="https://venomousprimate.github.io/report/books/completed_books_by_length.txt">All Books by Name</a>
-<a href="https://venomousprimate.github.io/report/books/completed_books_by_name.txt">All Books by Name</a>
-<a href="https://venomousprimate.github.io/report/books/randomized_comic_reserved_titles.txt">All Books by Name</a>
-<a href="https://venomousprimate.github.io/report/books/randomized_queued_titles.txt">All Books by Name</a>
-<a href="https://venomousprimate.github.io/report/books/reserved_books_by_folder.txt">All Books by Name</a>
-<a href="https://venomousprimate.github.io/report/books/reserved_books_by_length.txt">All Books by Name</a>
-<a href="https://venomousprimate.github.io/report/books/reserved_books_by_name.txt">All Books by Name</a>
-<a href="https://venomousprimate.github.io/report/books/sanderstatus.txt">All Books by Name</a>
+<p><a href="https://venomousprimate.github.io/report/books/all_books_by_name.txt">All Books by Name</a></p>
+<p><a href="https://venomousprimate.github.io/report/books/completed_books_by_folder.txt">All Books by Name</a></p>
+<p><a href="https://venomousprimate.github.io/report/books/completed_books_by_length.txt">All Books by Name</a></p>
+<p><a href="https://venomousprimate.github.io/report/books/completed_books_by_name.txt">All Books by Name</a></p>
+<p><a href="https://venomousprimate.github.io/report/books/randomized_comic_reserved_titles.txt">All Books by Name</a></p>
+<p><a href="https://venomousprimate.github.io/report/books/randomized_queued_titles.txt">All Books by Name</a></p>
+<p><a href="https://venomousprimate.github.io/report/books/reserved_books_by_folder.txt">All Books by Name</a></p>
+<p><a href="https://venomousprimate.github.io/report/books/reserved_books_by_length.txt">All Books by Name</a></p>
+<p><a href="https://venomousprimate.github.io/report/books/reserved_books_by_name.txt">All Books by Name</a></p>
+<p><a href="https://venomousprimate.github.io/report/books/sanderstatus.txt">All Books by Name</a></p>
 </body>
 </html>
