Change link names

--- a/report/books/index.html
+++ b/report/books/index.html
@@ -6,14 +6,14 @@
 </head>
 <body>
 <p><a href="https://venomousprimate.github.io/report/books/all_books_by_name.txt">All Books by Name</a></p>
-<p><a href="https://venomousprimate.github.io/report/books/completed_books_by_folder.txt">All Books by Name</a></p>
-<p><a href="https://venomousprimate.github.io/report/books/completed_books_by_length.txt">All Books by Name</a></p>
-<p><a href="https://venomousprimate.github.io/report/books/completed_books_by_name.txt">All Books by Name</a></p>
-<p><a href="https://venomousprimate.github.io/report/books/randomized_comic_reserved_titles.txt">All Books by Name</a></p>
-<p><a href="https://venomousprimate.github.io/report/books/randomized_queued_titles.txt">All Books by Name</a></p>
-<p><a href="https://venomousprimate.github.io/report/books/reserved_books_by_folder.txt">All Books by Name</a></p>
-<p><a href="https://venomousprimate.github.io/report/books/reserved_books_by_length.txt">All Books by Name</a></p>
-<p><a href="https://venomousprimate.github.io/report/books/reserved_books_by_name.txt">All Books by Name</a></p>
-<p><a href="https://venomousprimate.github.io/report/books/sanderstatus.txt">All Books by Name</a></p>
+<p><a href="https://venomousprimate.github.io/report/books/completed_books_by_folder.txt">Completed Books by Folder</a></p>
+<p><a href="https://venomousprimate.github.io/report/books/completed_books_by_length.txt">Completed Books by Length</a></p>
+<p><a href="https://venomousprimate.github.io/report/books/completed_books_by_name.txt">Completed Books by Name</a></p>
+<p><a href="https://venomousprimate.github.io/report/books/randomized_comic_reserved_titles.txt">Randomized Comic Reserved Titles</a></p>
+<p><a href="https://venomousprimate.github.io/report/books/randomized_queued_titles.txt">Randomized Queued Titles</a></p>
+<p><a href="https://venomousprimate.github.io/report/books/reserved_books_by_folder.txt">Reserved Books by Folder</a></p>
+<p><a href="https://venomousprimate.github.io/report/books/reserved_books_by_length.txt">Reserved Books by Length</a></p>
+<p><a href="https://venomousprimate.github.io/report/books/reserved_books_by_name.txt">Reserved Books by Name</a></p>
+<p><a href="https://venomousprimate.github.io/report/books/sanderstatus.txt">Sanderstatus</a></p>
 </body>
 </html>
