Adjust style sheets

--- a/report/books/index.html
+++ b/report/books/index.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="index.css">
     <meta charset="UTF-8">
     <title>Book Reports</title>
 </head>
 <body>
-<p><a href="all_books_by_name.txt">All Books by Name</a></p>
-<p><a href="completed_books_by_folder.txt">Completed Books by Folder</a></p>
-<p><a href="completed_books_by_length.txt">Completed Books by Length</a></p>
-<p><a href="completed_books_by_name.txt">Completed Books by Name</a></p>
-<p><a href="randomized_comic_reserved_titles.txt">Randomized Comic Reserved Titles</a></p>
-<p><a href="randomized_queued_titles.txt">Randomized Queued Titles</a></p>
-<p><a href="reserved_books_by_folder.txt">Reserved Books by Folder</a></p>
-<p><a href="reserved_books_by_length.txt">Reserved Books by Length</a></p>
-<p><a href="reserved_books_by_name.txt">Reserved Books by Name</a></p>
-<p><a href="sanderstatus.txt">Sanderstatus</a></p>
+<div class="content">
+<p><a href="all_books_by_name.txt">All Books by Name</a><BR>
+<a href="completed_books_by_folder.txt">Completed Books by Folder</a><BR>
+<a href="completed_books_by_length.txt">Completed Books by Length</a><BR>
+<a href="completed_books_by_name.txt">Completed Books by Name</a><BR>
+<a href="randomized_comic_reserved_titles.txt">Randomized Comic Reserved Titles</a><BR>
+<a href="randomized_queued_titles.txt">Randomized Queued Titles</a><BR>
+<a href="reserved_books_by_folder.txt">Reserved Books by Folder</a><BR>
+<a href="reserved_books_by_length.txt">Reserved Books by Length</a><BR>
+<a href="reserved_books_by_name.txt">Reserved Books by Name</a><BR>
+<a href="sanderstatus.txt">Sanderstatus</a></p>
+</div>
 </body>
 </html>
