--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="index.css">
     <meta charset="UTF-8">
     <title>VemomousPrimate</title>
 </head>
 <body>
-<div><img src="SlowLoris_green.jpg"></div>
+<div class="content"><img src="SlowLoris_green.jpg"></div>
 </body>
 </html>
