--- a/report/media/index.html
+++ b/report/media/index.html
@@ -11,67 +11,67 @@
     <table style="width:100%">
         <tr><td>Castlevania (stop at season 2)</td></tr>
         <tr><td >Season 1 ☑☑☑☑</td></tr><!-- 4 -->
-        <tr><td>Season 2 ☐☐☐☐☐☐☐☐</td></tr><!-- 8 -->
+        <tr><td>Season 2 ◻◻◻◻◻◻◻◻</td></tr><!-- 8 -->
     </table><br>
 
     <table style="width:100%">
         <tr><td>The Witcher</td></tr>
-        <tr><td >Season 1 ☐☐☐☐☐☐☐☐</td></tr><!-- 8 -->
+        <tr><td >Season 1 ◻◻◻◻◻◻◻◻</td></tr><!-- 8 -->
     </table><br>
 
     <table style="width:100%">
         <tr><td>Attack on Titan</td></tr>
         <tr><td >Season 1 ☑☑☑☑☑☑☑☑☑☑☑☑☑☑☑☑☑☑☑☑☑☑☑☑☑</td></tr><!-- 25 -->
         <tr><td >Season 2 ☑☑☑☑☑☑☑☑☑☑☑☑</td></tr><!-- 12 -->
-        <tr><td >Season 3 ☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐</td></tr><!-- 22 -->
-        <tr><td >Season 4 ☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐</td></tr><!-- 16 -->
+        <tr><td >Season 3 ◻◻◻◻◻◻◻◻◻◻◻◻◻◻◻◻◻◻◻◻◻◻</td></tr><!-- 22 -->
+        <tr><td >Season 4 ◻◻◻◻◻◻◻◻◻◻◻◻◻◻◻◻</td></tr><!-- 16 -->
     </table><br>
 
     <table style="width:100%">
         <tr><td>Lower Decks</td></tr>
-        <tr><td >Season 1 ☑☑☑☐☐☐☐☐☐☐</td></tr><!-- 10 -->
+        <tr><td >Season 1 ☑☑☑◻◻◻◻◻◻◻</td></tr><!-- 10 -->
     </table><br>
 
     <table style="width:100%">
         <tr><td>Picard</td></tr>
-        <tr><td >Season 1 ☑☐☐☐☐☐☐☐☐☐</td></tr><!-- 10 -->
+        <tr><td >Season 1 ☑◻◻◻◻◻◻◻◻◻</td></tr><!-- 10 -->
     </table><br>
 
     <table style="width:100%">
         <tr><td>Primal</td></tr>
-        <tr><td >Season 1 ☐☐☐☐☐☐☐☐☐☐</td></tr><!-- 10 -->
+        <tr><td >Season 1 ◻◻◻◻◻◻◻◻◻◻</td></tr><!-- 10 -->
     </table><br>
 
     <table style="width:100%">
         <tr><td>Invincible</td></tr>
-        <tr><td >Season 1 ☑☐☐☐☐☐☐☐</td></tr><!-- 8 -->
+        <tr><td >Season 1 ☑◻◻◻◻◻◻◻</td></tr><!-- 8 -->
     </table><br>
 
     <table style="width:100%">
         <tr><td>Masters of the Universe: Revelation</td></tr>
-        <tr><td >Season 1 ☐☐☐☐☐</td></tr><!-- 5 -->
+        <tr><td >Season 1 ◻◻◻◻◻</td></tr><!-- 5 -->
     </table><br>
 
     <table style="width:100%">
         <tr><td>Good Omens</td></tr>
-        <tr><td >Season 1 ☑☐☐☐☐☐☐</td></tr><!-- 7 -->
+        <tr><td >Season 1 ☑◻◻◻◻◻◻</td></tr><!-- 7 -->
     </table><br>
 
     <table style="width:100%">
         <tr><td>Cosmos: Possible Worlds</td></tr>
-        <tr><td >Season 1 ☑☑☑☐☐☐☐☐☐☐☐☐☐</td></tr><!-- 13 -->
+        <tr><td >Season 1 ☑☑☑◻◻◻◻◻◻◻◻◻◻</td></tr><!-- 13 -->
     </table><br>
 
     <table style="width:100%">
         <tr><td>The Boys</td></tr>
-        <tr><td >Season 1 ☐☐☐☐☐☐☐☐</td></tr><!-- 8 -->
-        <tr><td >Season 2 ☐☐☐☐☐☐☐☐</td></tr><!-- 8 -->
+        <tr><td >Season 1 ◻◻◻◻◻◻◻◻</td></tr><!-- 8 -->
+        <tr><td >Season 2 ◻◻◻◻◻◻◻◻</td></tr><!-- 8 -->
     </table><br>
 
     <table style="width:100%">
         <tr><td>LOVE DEATH + ROBOTS</td></tr>
         <tr><td >Season 1 ☑☑☑☑☑☑☑☑☑☑☑☑☑☑☑☑☑☑</td></tr><!-- 18 -->
-        <tr><td >Season 2 ☐☐☐☐☐☐☐☐</td></tr><!-- 8 -->
+        <tr><td >Season 2 ◻◻◻◻◻◻◻◻</td></tr><!-- 8 -->
     </table><br>
 
 </div>
