update media progress

--- a/report/media/index.html
+++ b/report/media/index.html
@@ -89,10 +89,10 @@
             <input type="checkbox" checked>
         </td></tr><!-- 12 -->
         <tr><td>Season 3
-            <input type="checkbox">
-            <input type="checkbox">
-            <input type="checkbox">
-            <input type="checkbox">
+            <input type="checkbox" checked>
+            <input type="checkbox" checked>
+            <input type="checkbox" checked>
+            <input type="checkbox" checked>
             <input type="checkbox">
             <input type="checkbox">
             <input type="checkbox">
@@ -199,10 +199,10 @@
         <tr><td>Masters of the Universe: Revelation</td></tr>
         <tr><td>Season 1
             <input type="checkbox" checked>
-            <input type="checkbox">
-            <input type="checkbox">
-            <input type="checkbox">
-            <input type="checkbox">
+            <input type="checkbox" checked>
+            <input type="checkbox" checked>
+            <input type="checkbox" checked>
+            <input type="checkbox" checked>
         </td></tr><!-- 5 -->
     </table><br>
 
