book report content update Thu 07/29/2021

--- a/report/media/index.html
+++ b/report/media/index.html
@@ -93,15 +93,15 @@
             <input type="checkbox" checked>
             <input type="checkbox" checked>
             <input type="checkbox" checked>
-            <input type="checkbox">
-            <input type="checkbox">
-            <input type="checkbox">
-            <input type="checkbox">
-            <input type="checkbox">
-            <input type="checkbox">
+            <input type="checkbox" checked>
+            <input type="checkbox" checked>
+            <input type="checkbox" checked>
+            <input type="checkbox" checked>
+            <input type="checkbox" checked>
+            <input type="checkbox" checked>
 
-            <input type="checkbox">
-            <input type="checkbox">
+            <input type="checkbox" checked>
+            <input type="checkbox" checked>
             <input type="checkbox">
             <input type="checkbox">
             <input type="checkbox">
