update media status

--- a/report/media/index.html
+++ b/report/media/index.html
@@ -102,20 +102,20 @@
 
             <input type="checkbox" checked>
             <input type="checkbox" checked>
-            <input type="checkbox">
-            <input type="checkbox">
-            <input type="checkbox">
-            <input type="checkbox">
-            <input type="checkbox">
-            <input type="checkbox">
-            <input type="checkbox">
-            <input type="checkbox">
+            <input type="checkbox" checked>
+            <input type="checkbox" checked>
+            <input type="checkbox" checked>
+            <input type="checkbox" checked>
+            <input type="checkbox" checked>
+            <input type="checkbox" checked>
+            <input type="checkbox" checked>
+            <input type="checkbox" checked>
 
-            <input type="checkbox">
-            <input type="checkbox">
+            <input type="checkbox" checked>
+            <input type="checkbox" checked>
         </td></tr><!-- 22 -->
         <tr><td>Season 4
-            <input type="checkbox">
+            <input type="checkbox" checked>
             <input type="checkbox">
             <input type="checkbox">
             <input type="checkbox">
