update media status

--- a/report/media/index.html
+++ b/report/media/index.html
@@ -147,6 +147,18 @@
             <input type="checkbox">
             <input type="checkbox">
         </td></tr><!-- 10 -->
+        <tr><td>Season 2
+            <input type="checkbox">
+            <input type="checkbox">
+            <input type="checkbox">
+            <input type="checkbox">
+            <input type="checkbox">
+            <input type="checkbox">
+            <input type="checkbox">
+            <input type="checkbox">
+            <input type="checkbox">
+            <input type="checkbox">
+        </td></tr><!-- 10 -->
     </table><br>
 
     <table style="width:100%">
