update media progress

--- a/report/media/index.html
+++ b/report/media/index.html
@@ -116,15 +116,15 @@
         </td></tr><!-- 22 -->
         <tr><td>Season 4
             <input type="checkbox" checked>
-            <input type="checkbox">
-            <input type="checkbox">
-            <input type="checkbox">
-            <input type="checkbox">
-            <input type="checkbox">
-            <input type="checkbox">
-            <input type="checkbox">
-            <input type="checkbox">
-            <input type="checkbox">
+            <input type="checkbox" checked>
+            <input type="checkbox" checked>
+            <input type="checkbox" checked>
+            <input type="checkbox" checked>
+            <input type="checkbox" checked>
+            <input type="checkbox" checked>
+            <input type="checkbox" checked>
+            <input type="checkbox" checked>
+            <input type="checkbox" checked>
 
             <input type="checkbox">
             <input type="checkbox">
