update color scheme

--- a/report/books/index.html
+++ b/report/books/index.html
@@ -1,6 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <style>
+        a:link {
+            color: lightslategrey;
+            background-color: transparent;
+            text-decoration: none;
+        }
+
+        a:visited {
+            color: darkslateblue;
+            background-color: transparent;
+            text-decoration: none;
+        }
+
+        a:hover {
+            color: darkslategray;
+            background-color: transparent;
+            text-decoration: underline;
+        }
+
+        a:active {
+            color: slateblue;
+            background-color: transparent;
+            text-decoration: underline;
+        }
+    </style>
     <link rel="stylesheet" href="index.css">
     <meta charset="UTF-8">
     <title>Book Reports</title>
