add new formatting to book reports

--- a/report/books/index.html
+++ b/report/books/index.html
@@ -32,16 +32,16 @@
 </head>
 <body>
 <div class="content">
-<p><a href="all_books_by_name.txt">All Books by Name</a><BR>
-<a href="completed_books_by_folder.txt">Completed Books by Folder</a><BR>
-<a href="completed_books_by_length.txt">Completed Books by Length</a><BR>
-<a href="completed_books_by_name.txt">Completed Books by Name</a><BR>
-<a href="randomized_comic_reserved_titles.txt">Randomized Comic Reserved Titles</a><BR>
-<a href="randomized_queued_titles.txt">Randomized Queued Titles</a><BR>
-<a href="reserved_books_by_folder.txt">Reserved Books by Folder</a><BR>
-<a href="reserved_books_by_length.txt">Reserved Books by Length</a><BR>
-<a href="reserved_books_by_name.txt">Reserved Books by Name</a><BR>
-<a href="sanderstatus.txt">Sanderstatus</a></p>
+<p><a href="all_books_by_name.html">All Books by Name</a><BR>
+<a href="completed_books_by_folder.html">Completed Books by Folder</a><BR>
+<a href="completed_books_by_length.html">Completed Books by Length</a><BR>
+<a href="completed_books_by_name.html">Completed Books by Name</a><BR>
+<a href="randomized_comic_reserved_titles.html">Randomized Comic Reserved Titles</a><BR>
+<a href="randomized_queued_titles.html">Randomized Queued Titles</a><BR>
+<a href="reserved_books_by_folder.html">Reserved Books by Folder</a><BR>
+<a href="reserved_books_by_length.html">Reserved Books by Length</a><BR>
+<a href="reserved_books_by_name.html">Reserved Books by Name</a><BR>
+<a href="sanderstatus.html">Sanderstatus</a></p>
 </div>
 </body>
 </html>
