Switch media report to icons

--- a/report/books/index.html
+++ b/report/books/index.html
@@ -36,8 +36,8 @@
 <a href="Completed_books_sorted_by_folder.html">Completed Books by Folder</a><BR>
 <a href="Completed_books_sorted_by_length.html">Completed Books by Length</a><BR>
 <a href="Completed_books_sorted_by_name.html">Completed Books by Name</a><BR>
-<a href="A_randomized_list_of_reserved_comic_book_trade_titles.html">Randomized Comic Reserved Titles</a><BR>
-<a href="A_randomized_list_of_queued_titles.html">Randomized Queued Titles</a><BR>
+<a href="A_randomized_list_of_reserved_comic_book_trade_titles.html">Random Reserved Comic Titles</a><BR>
+<a href="A_randomized_list_of_queued_titles.html">Random Queued Titles</a><BR>
 <a href="Reserved_books_sorted_by_folder.html">Reserved Books by Folder</a><BR>
 <a href="Reserved_books_sorted_by_length.html">Reserved Books by Length</a><BR>
 <a href="Reserved_books_sorted_by_name.html">Reserved Books by Name</a><BR>
