change media report icons

--- a/report/books/index.html
+++ b/report/books/index.html
@@ -33,7 +33,7 @@
 <body>
 <div class="content">
 <p><a href="All_books_sorted_by_name.html">All Books by Name</a><BR>
-<a href="Completed_books_sorted_by_folder.html">Completed Books by Folder</a><BR>
+<a href="Completed_books_sorted_by_folder.html">Completed Books by Year</a><BR>
 <a href="Completed_books_sorted_by_length.html">Completed Books by Length</a><BR>
 <a href="Completed_books_sorted_by_name.html">Completed Books by Name</a><BR>
 <a href="A_randomized_list_of_reserved_comic_book_trade_titles.html">Random Reserved Comic Titles</a><BR>
