book report content update Mon 08/02/2021

--- a/report/books/Completed_books_sorted_by_length.html
+++ b/report/books/Completed_books_sorted_by_length.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by length - 08/01/2021 14:18<br>
+Completed books sorted by length - 08/02/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
 378 books<br>
@@ -408,12 +408,12 @@ No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 378 titles - 4207H 36M / 175D 7H 36M<br>
 Total remaining in queue and reserve: 803 titles - 10022H 19M / 417D 14H 19M<br>
-Average completed per year: 44.1 titles - 490H 22M / 20D 10H 22M<br>
-Remaining years of reserve material at average yearly pace: 18.2<br>
-Remaining years of reserve material at current year pace: 10.4<br>
+Average completed per year: 44.0 titles - 490H 13M / 20D 10H 13M<br>
+Remaining years of reserve material at average yearly pace: 18.3<br>
+Remaining years of reserve material at current year pace: 10.6<br>
  <br>
-Total time to process all reports: 00:00:01.549 (1.549 seconds)<br>
-Total time including file writes: 00:00:01..55 (1.55 seconds)
+Total time to process all reports: 00:00:01.612 (1.612 seconds)<br>
+Total time including file writes: 00:00:01.612 (1.612 seconds)
 </div>
 </body>
 </html>
