--- a/report/books/Completed_books_sorted_by_folder.html
+++ b/report/books/Completed_books_sorted_by_folder.html
@@ -7,14 +7,14 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by folder - 08/01/2021 14:18<br>
+Completed books sorted by folder - 08/02/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
 Completed in 2021 : 45 books - 429H 48M / 17D 21H 48M<br>
 Total Comic Trades : 18<br>
 Average book length : 9H 33M<br>
-Hours read per week : 14H 7M<br>
-On pace to complete 77 books (736H 59M / 30D 16H 59M) by the end of 2021.<br>
+Hours read per week : 14H 3M<br>
+On pace to complete 76 books (733H 32M / 30D 13H 32M) by the end of 2021.<br>
  <br>
 21 Lessons for the 21st Century - Yuval Noah Harari - 11H 44M<br>
 A People's History of the United States - Howard Zinn - 34H 19M<br>
@@ -478,12 +478,12 @@ No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 378 titles - 4207H 36M / 175D 7H 36M<br>
 Total remaining in queue and reserve: 803 titles - 10022H 19M / 417D 14H 19M<br>
-Average completed per year: 44.1 titles - 490H 22M / 20D 10H 22M<br>
-Remaining years of reserve material at average yearly pace: 18.2<br>
-Remaining years of reserve material at current year pace: 10.4<br>
+Average completed per year: 44.0 titles - 490H 13M / 20D 10H 13M<br>
+Remaining years of reserve material at average yearly pace: 18.3<br>
+Remaining years of reserve material at current year pace: 10.6<br>
  <br>
-Total time to process all reports: 00:00:01.549 (1.549 seconds)<br>
-Total time including file writes: 00:00:01..55 (1.55 seconds)
+Total time to process all reports: 00:00:01.612 (1.612 seconds)<br>
+Total time including file writes: 00:00:01.612 (1.612 seconds)
 </div>
 </body>
 </html>
