book report content update Tue 08/03/2021

--- a/report/books/Completed_books_sorted_by_length.html
+++ b/report/books/Completed_books_sorted_by_length.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by length - 08/02/2021 15:24<br>
+Completed books sorted by length - 08/03/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
-378 books<br>
+379 books<br>
  <br>
 Shadow War of the Night Dragons 1 -The Dead City - Prologue - John Scalzi - 0H 21M (Completed in 2014)<br>
 Gratitude - Oliver Sacks - 0H 36M (Completed in 2020)<br>
@@ -148,6 +148,7 @@ Outliers - Malcolm Gladwell - 7H 19M (Completed in 2021)<br>
 The Dark Tower I - The Gunslinger - 7H 22M (Completed in 2015)<br>
 Batgirl Year One - 7H 28M (Completed in 2020)<br>
 The Power of Showing Up - Daniel J. Siegel - 7H 29M (Completed in 2021)<br>
+Superfreakonomics - Steven D. Levitt - 7H 30M (Completed in 2021)<br>
 A Clockwork Orange - Anthony Burgess - 7H 30M (Completed in 2019)<br>
 Love Is Not Enough - Mark Manson - 7H 33M (Completed in 2020)<br>
 Machineries of Empire 1 - Ninefox Gambit - Yoon Ha Lee - 7H 35M (Completed in 2019)<br>
@@ -378,9 +379,9 @@ Stormlight Archive 4 - Rhythm of War - Brandon Sanderson - 57H 41M (Completed in
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 173 books - 2244H 26M / 93D 12H 26M<br>
+Queue - Current Audiobooks - 172 books - 2236H 55M / 93D 4H 55M<br>
 Queue - Audible Audiobooks - 33 books - 507H 6M / 21D 3H 6M<br>
-Completed in 2021 - 45 books - 429H 48M / 17D 21H 48M<br>
+Completed in 2021 - 46 books - 437H 19M / 18D 5H 19M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -392,28 +393,28 @@ Completed in 2013 - 38 books - 436H 51M / 18D 4H 51M<br>
 Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
 Book Reserve - Comic Trades - 118 books - 734H 29M / 30D 14H 29M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
-Book Reserve - Audiobooks - 440 books - 5988H 58M / 249D 12H 58M<br>
+Book Reserve - Audiobooks - 443 books - 6028H 55M / 251D 4H 55M<br>
  <br>
 Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-206 queued items: 2751H 32M / 114D 15H 32M<br>
+205 queued items: 2744H 1M / 114D 8H 1M<br>
 0 reserve titles are marked as high priority<br>
-25.65% of reserve items are queued<br>
+25.47% of reserve items are queued<br>
  <br>
-All books included in this report: 1181 titles - 14229H 56M / 592D 21H 56M<br>
+All books included in this report: 1184 titles - 14269H 53M / 594D 13H 53M<br>
 Records not found in the lookup file: 0<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 378 titles - 4207H 36M / 175D 7H 36M<br>
-Total remaining in queue and reserve: 803 titles - 10022H 19M / 417D 14H 19M<br>
-Average completed per year: 44.0 titles - 490H 13M / 20D 10H 13M<br>
+Total completed since 01/01/2013: 379 titles - 4215H 7M / 175D 15H 7M<br>
+Total remaining in queue and reserve: 805 titles - 10054H 46M / 418D 22H 46M<br>
+Average completed per year: 44.1 titles - 490H 56M / 20D 10H 56M<br>
 Remaining years of reserve material at average yearly pace: 18.3<br>
-Remaining years of reserve material at current year pace: 10.6<br>
+Remaining years of reserve material at current year pace: 10.3<br>
  <br>
-Total time to process all reports: 00:00:01.551 (1.551 seconds)<br>
-Total time including file writes: 00:00:01.551 (1.551 seconds)
+Total time to process all reports: 00:00:04.483 (4.483 seconds)<br>
+Total time including file writes: 00:00:04.483 (4.483 seconds)
 </div>
 </body>
 </html>
