--- a/report/books/All_books_sorted_by_name.html
+++ b/report/books/All_books_sorted_by_name.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-All books sorted by name - 08/02/2021 15:24<br>
+All books sorted by name - 08/03/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
-1181 books<br>
+1184 books<br>
  <br>
 1-2-3 Magic - Thomas Phelan - 7H 3M (Book Reserve - Audiobooks)<br>
 112263 - Stephen King - 30H 46M (Queue - Current Audiobooks)<br>
@@ -321,6 +321,8 @@ Dune 5 - Heretics of Dune  - Frank Herbert - 18H 9M (Book Reserve - Audiobooks)<
 Dune 6 - Chapterhouse Dune  - Frank Herbert - 16H 47M (Book Reserve - Audiobooks)<br>
 Dying of the Light - George R.R. Martin - 11H 43M (Book Reserve - Audiobooks)<br>
 Earthsea 1 - A Wizard of Earthsea - Ursula K. Le Guin - 8H 13M (Book Reserve - Physical and Kindle Books)<br>
+Earthseed 1 - Parable of the Sower - Octavia E. Butler - 12H 5M (Book Reserve - Audiobooks)<br>
+Earthseed 2 - Parable of the Talents - Octavia E. Butler - 15H 32M (Book Reserve - Audiobooks)<br>
 East of Eden - John Steinbeck - 25H 35M (Queue - Current Audiobooks)<br>
 Economic Dignity - Gene Sperling - 12H 53M (Book Reserve - Audiobooks)<br>
 Edge of Spider-geddon - 3H 44M (Book Reserve - Comic Trades)<br>
@@ -674,6 +676,7 @@ Pern 9-short stories -A Gift of Dragons - 5H 43M (Book Reserve - Audiobooks)<br>
 Peter Pan - J.M. Barrie - 5H 16M (Book Reserve - Audiobooks)<br>
 Peter Parker The Spectacular Spider-man vol 1 - 4H 28M (Book Reserve - Comic Trades)<br>
 Pharma - Gerald Posner - 23H 2M (Book Reserve - Audiobooks)<br>
+Phasma (Star Wars) - Delilah S. Dawson - 12H 18M (Book Reserve - Audiobooks)<br>
 Physics of the Future - Michio Kaku - 15H 43M (Book Reserve - Audiobooks)<br>
 Physics of the Impossible - Michio Kaku - 11H 51M (Book Reserve - Audiobooks)<br>
 Pillars of the Earth 1 - The Pillars of the Earth - Ken Follett - 41H 8M (Queue - Current Audiobooks)<br>
@@ -811,7 +814,7 @@ Suicide Squad vol 4 - 4H 28M (Book Reserve - Comic Trades)<br>
 Suicide Squad vol 5 - 6H 28M (Book Reserve - Comic Trades)<br>
 Summer Frost - Blake Crouch - 2H 19M (Completed in 2020)<br>
 Super Sons vol 1 - 3H 59M (Book Reserve - Comic Trades)<br>
-Superfreakonomics - Steven D. Levitt - 7H 30M (Queue - Current Audiobooks)<br>
+Superfreakonomics - Steven D. Levitt - 7H 30M (Completed in 2021)<br>
 Superior Spider-man Necessary Evil - 3H 36M (Book Reserve - Comic Trades)<br>
 Superman vol 3 - 4H 28M (Book Reserve - Comic Trades)<br>
 Superman vol 4 - 5H 28M (Book Reserve - Comic Trades)<br>
@@ -1198,9 +1201,9 @@ Zones of Thought 3 - The Children of the Sky - Vernor Vinge - 26H 56M (Book Rese
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 173 books - 2244H 26M / 93D 12H 26M<br>
+Queue - Current Audiobooks - 172 books - 2236H 55M / 93D 4H 55M<br>
 Queue - Audible Audiobooks - 33 books - 507H 6M / 21D 3H 6M<br>
-Completed in 2021 - 45 books - 429H 48M / 17D 21H 48M<br>
+Completed in 2021 - 46 books - 437H 19M / 18D 5H 19M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -1212,28 +1215,28 @@ Completed in 2013 - 38 books - 436H 51M / 18D 4H 51M<br>
 Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
 Book Reserve - Comic Trades - 118 books - 734H 29M / 30D 14H 29M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
-Book Reserve - Audiobooks - 440 books - 5988H 58M / 249D 12H 58M<br>
+Book Reserve - Audiobooks - 443 books - 6028H 55M / 251D 4H 55M<br>
  <br>
 Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-206 queued items: 2751H 32M / 114D 15H 32M<br>
+205 queued items: 2744H 1M / 114D 8H 1M<br>
 0 reserve titles are marked as high priority<br>
-25.65% of reserve items are queued<br>
+25.47% of reserve items are queued<br>
  <br>
-All books included in this report: 1181 titles - 14229H 56M / 592D 21H 56M<br>
+All books included in this report: 1184 titles - 14269H 53M / 594D 13H 53M<br>
 Records not found in the lookup file: 0<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 378 titles - 4207H 36M / 175D 7H 36M<br>
-Total remaining in queue and reserve: 803 titles - 10022H 19M / 417D 14H 19M<br>
-Average completed per year: 44.0 titles - 490H 13M / 20D 10H 13M<br>
+Total completed since 01/01/2013: 379 titles - 4215H 7M / 175D 15H 7M<br>
+Total remaining in queue and reserve: 805 titles - 10054H 46M / 418D 22H 46M<br>
+Average completed per year: 44.1 titles - 490H 56M / 20D 10H 56M<br>
 Remaining years of reserve material at average yearly pace: 18.3<br>
-Remaining years of reserve material at current year pace: 10.6<br>
+Remaining years of reserve material at current year pace: 10.3<br>
  <br>
-Total time to process all reports: 00:00:01.551 (1.551 seconds)<br>
-Total time including file writes: 00:00:01.551 (1.551 seconds)
+Total time to process all reports: 00:00:04.483 (4.483 seconds)<br>
+Total time including file writes: 00:00:04.483 (4.483 seconds)
 </div>
 </body>
 </html>
