--- a/report/books/Completed_books_sorted_by_folder.html
+++ b/report/books/Completed_books_sorted_by_folder.html
@@ -7,14 +7,14 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by folder - 08/02/2021 15:24<br>
+Completed books sorted by folder - 08/03/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
-Completed in 2021 : 45 books - 429H 48M / 17D 21H 48M<br>
+Completed in 2021 : 46 books - 437H 19M / 18D 5H 19M<br>
 Total Comic Trades : 18<br>
-Average book length : 9H 33M<br>
-Hours read per week : 14H 3M<br>
-On pace to complete 76 books (733H 32M / 30D 13H 32M) by the end of 2021.<br>
+Average book length : 9H 30M<br>
+Hours read per week : 14H 14M<br>
+On pace to complete 78 books (742H 52M / 30D 22H 52M) by the end of 2021<br>
  <br>
 21 Lessons for the 21st Century - Yuval Noah Harari - 11H 44M<br>
 A People's History of the United States - Howard Zinn - 34H 19M<br>
@@ -48,6 +48,7 @@ Spider-Ham Aporkalypse Now - 3H 29M<br>
 Star Wars the High Republic - A Test of Courage - Justina Ireland - 4H 35M<br>
 Star Wars the High Republic - Into the Dark - Claudia Gray - 11H 14M<br>
 Star Wars the High Republic - Light of the Jedi - Charles Soule - 13H 38M<br>
+Superfreakonomics - Steven D. Levitt - 7H 30M<br>
 Teen Titans Raven - 5H 58M<br>
 The 7 Habits of Highly Effective People - Stephen R. Covey - 13H 8M<br>
 The Batman Who Laughs - 7H 13M<br>
@@ -448,9 +449,9 @@ World War Z - Max Brooks - 5H 59M<br>
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 173 books - 2244H 26M / 93D 12H 26M<br>
+Queue - Current Audiobooks - 172 books - 2236H 55M / 93D 4H 55M<br>
 Queue - Audible Audiobooks - 33 books - 507H 6M / 21D 3H 6M<br>
-Completed in 2021 - 45 books - 429H 48M / 17D 21H 48M<br>
+Completed in 2021 - 46 books - 437H 19M / 18D 5H 19M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -462,28 +463,28 @@ Completed in 2013 - 38 books - 436H 51M / 18D 4H 51M<br>
 Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
 Book Reserve - Comic Trades - 118 books - 734H 29M / 30D 14H 29M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
-Book Reserve - Audiobooks - 440 books - 5988H 58M / 249D 12H 58M<br>
+Book Reserve - Audiobooks - 443 books - 6028H 55M / 251D 4H 55M<br>
  <br>
 Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-206 queued items: 2751H 32M / 114D 15H 32M<br>
+205 queued items: 2744H 1M / 114D 8H 1M<br>
 0 reserve titles are marked as high priority<br>
-25.65% of reserve items are queued<br>
+25.47% of reserve items are queued<br>
  <br>
-All books included in this report: 1181 titles - 14229H 56M / 592D 21H 56M<br>
+All books included in this report: 1184 titles - 14269H 53M / 594D 13H 53M<br>
 Records not found in the lookup file: 0<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 378 titles - 4207H 36M / 175D 7H 36M<br>
-Total remaining in queue and reserve: 803 titles - 10022H 19M / 417D 14H 19M<br>
-Average completed per year: 44.0 titles - 490H 13M / 20D 10H 13M<br>
+Total completed since 01/01/2013: 379 titles - 4215H 7M / 175D 15H 7M<br>
+Total remaining in queue and reserve: 805 titles - 10054H 46M / 418D 22H 46M<br>
+Average completed per year: 44.1 titles - 490H 56M / 20D 10H 56M<br>
 Remaining years of reserve material at average yearly pace: 18.3<br>
-Remaining years of reserve material at current year pace: 10.6<br>
+Remaining years of reserve material at current year pace: 10.3<br>
  <br>
-Total time to process all reports: 00:00:01.551 (1.551 seconds)<br>
-Total time including file writes: 00:00:01.551 (1.551 seconds)
+Total time to process all reports: 00:00:04.483 (4.483 seconds)<br>
+Total time including file writes: 00:00:04.483 (4.483 seconds)
 </div>
 </body>
 </html>
