--- a/report/books/Completed_books_sorted_by_name.html
+++ b/report/books/Completed_books_sorted_by_name.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by name - 08/02/2021 15:24<br>
+Completed books sorted by name - 08/03/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
-378 books<br>
+379 books<br>
  <br>
 12 Rules for Life - Jordan B. Peterson - 15H 44M (Completed in 2020)<br>
 13 Things That Don't Make Sense - Michael Brooks - 8H 59M (Completed in 2018)<br>
@@ -304,6 +304,7 @@ Stranger Planet - Nathan W. Pyle - 4H 28M (Completed in 2020)<br>
 Stranger in a Strange Land - Robert A Heinlein - unabridged - 16H 20M (Completed in 2013)<br>
 Stuff Matters - Mark Miodownik - 6H 35M (Completed in 2019)<br>
 Summer Frost - Blake Crouch - 2H 19M (Completed in 2020)<br>
+Superfreakonomics - Steven D. Levitt - 7H 30M (Completed in 2021)<br>
 Surely You're Joking, Mr. Feynman! - Richard P. Feynman - 11H 35M (Completed in 2019)<br>
 Takeshi Kovacs 1 - Altered Carbon - Richard Morgan - 17H 13M (Completed in 2013)<br>
 Teen Titans Raven - 5H 58M (Completed in 2021)<br>
@@ -395,9 +396,9 @@ Zones of Thought 1 - A Fire Upon the Deep - Vernor Vinge - 21H 43M (Completed in
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 173 books - 2244H 26M / 93D 12H 26M<br>
+Queue - Current Audiobooks - 172 books - 2236H 55M / 93D 4H 55M<br>
 Queue - Audible Audiobooks - 33 books - 507H 6M / 21D 3H 6M<br>
-Completed in 2021 - 45 books - 429H 48M / 17D 21H 48M<br>
+Completed in 2021 - 46 books - 437H 19M / 18D 5H 19M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -409,28 +410,28 @@ Completed in 2013 - 38 books - 436H 51M / 18D 4H 51M<br>
 Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
 Book Reserve - Comic Trades - 118 books - 734H 29M / 30D 14H 29M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
-Book Reserve - Audiobooks - 440 books - 5988H 58M / 249D 12H 58M<br>
+Book Reserve - Audiobooks - 443 books - 6028H 55M / 251D 4H 55M<br>
  <br>
 Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-206 queued items: 2751H 32M / 114D 15H 32M<br>
+205 queued items: 2744H 1M / 114D 8H 1M<br>
 0 reserve titles are marked as high priority<br>
-25.65% of reserve items are queued<br>
+25.47% of reserve items are queued<br>
  <br>
-All books included in this report: 1181 titles - 14229H 56M / 592D 21H 56M<br>
+All books included in this report: 1184 titles - 14269H 53M / 594D 13H 53M<br>
 Records not found in the lookup file: 0<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 378 titles - 4207H 36M / 175D 7H 36M<br>
-Total remaining in queue and reserve: 803 titles - 10022H 19M / 417D 14H 19M<br>
-Average completed per year: 44.0 titles - 490H 13M / 20D 10H 13M<br>
+Total completed since 01/01/2013: 379 titles - 4215H 7M / 175D 15H 7M<br>
+Total remaining in queue and reserve: 805 titles - 10054H 46M / 418D 22H 46M<br>
+Average completed per year: 44.1 titles - 490H 56M / 20D 10H 56M<br>
 Remaining years of reserve material at average yearly pace: 18.3<br>
-Remaining years of reserve material at current year pace: 10.6<br>
+Remaining years of reserve material at current year pace: 10.3<br>
  <br>
-Total time to process all reports: 00:00:01.551 (1.551 seconds)<br>
-Total time including file writes: 00:00:01.551 (1.551 seconds)
+Total time to process all reports: 00:00:04.483 (4.483 seconds)<br>
+Total time including file writes: 00:00:04.483 (4.483 seconds)
 </div>
 </body>
 </html>
