--- a/report/books/Reserved_books_sorted_by_length.html
+++ b/report/books/Reserved_books_sorted_by_length.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by length - 08/02/2021 15:24<br>
+Reserved books sorted by length - 08/03/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
-803 books<br>
+805 books<br>
  <br>
 Art of War - Sun Tzu - 1H 16M (Queue - Audible Audiobooks)<br>
 Fantastic Beasts and Where to Find Them - J. K. Rowling - 1H 54M (Queue - Current Audiobooks)<br>
@@ -162,7 +162,6 @@ A Princess of Mars - Edgar Rice Burroughs - 7H 24M (Book Reserve - Audiobooks)<b
 Prepared - Diane Tavenner - 7H 24M (Queue - Current Audiobooks)<br>
 Time Quartet 3 - A Swiftly Tilting Planet - Madeleine L'engle - 7H 26M (Book Reserve - Audiobooks)<br>
 George Carlin Reads to You - George Carlin - 7H 26M (Queue - Current Audiobooks)<br>
-Superfreakonomics - Steven D. Levitt - 7H 30M (Queue - Current Audiobooks)<br>
 Artemis Fowl 4 - The Opal Deception - 7H 31M (Book Reserve - Audiobooks)<br>
 The Three Stigmata of Palmer Eldritch - Philip K. Dick - 7H 32M (Book Reserve - Audiobooks)<br>
 No Country for Old Men - Cormac McCarthy - 7H 33M (Book Reserve - Audiobooks)<br>
@@ -387,6 +386,7 @@ Fire and Fury - Inside the Trump White House - Michael Wolff - 11H 59M (Book Res
 The Skeptic's Guide to American History - Mark A. Stoler - 12H 1M (Queue - Audible Audiobooks)<br>
 Witcher 3 - Baptism of Fire - Andrzej Sapkowski - 12H 2M (Book Reserve - Audiobooks)<br>
 Call Sign Chaos - Jim Mattis - 12H 4M (Book Reserve - Audiobooks)<br>
+Earthseed 1 - Parable of the Sower - Octavia E. Butler - 12H 5M (Book Reserve - Audiobooks)<br>
 Handmaid's Tale 1 - The Handmaid's Tale - Margaret Atwood - 12H 6M (Queue - Audible Audiobooks)<br>
 Sphere - Michael Crichton - 12H 6M (Book Reserve - Audiobooks (Need new source))<br>
 Circe - Madeline Miller - 12H 11M (Queue - Current Audiobooks)<br>
@@ -396,6 +396,7 @@ Educated - Tara Westover - 12H 13M (Queue - Current Audiobooks)<br>
 Alvin Maker 2 - Red Prophet - Orson Scott Card - 12H 14M (Book Reserve - Audiobooks)<br>
 Mysteries of Modern Physics - Time - Sean Carroll - 12H 17M (Queue - Audible Audiobooks)<br>
 Bloodline (Star Wars) - Claudia Gray - 12H 18M (Book Reserve - Audiobooks)<br>
+Phasma (Star Wars) - Delilah S. Dawson - 12H 18M (Book Reserve - Audiobooks)<br>
 Arguing with Zombies - Paul Krugman - 12H 18M (Queue - Current Audiobooks)<br>
 The Road to Character - David Brooks - 12H 20M (Queue - Current Audiobooks)<br>
 Shannara 17 Jarka Ruus (High Druid of Shannara, #1) - 12H 23M (Book Reserve - Audiobooks)<br>
@@ -510,6 +511,7 @@ If It Bleeds - Stephen King - 15H 17M (Book Reserve - Audiobooks)<br>
 Scythe 3 - The Toll - Neal Shusterman - 15H 22M (Queue - Audible Audiobooks)<br>
 Pern 9-11 - The Skies of Pern - 15H 25M (Book Reserve - Audiobooks)<br>
 Mythos - Stephen Fry - 15H 30M (Queue - Current Audiobooks)<br>
+Earthseed 2 - Parable of the Talents - Octavia E. Butler - 15H 32M (Book Reserve - Audiobooks)<br>
 The Dresden Files 12 - Changes - Jim Butcher - 15H 33M (Book Reserve - Audiobooks)<br>
 The Dresden Files - Brief Cases - Jim Butcher - 15H 34M (Book Reserve - Audiobooks)<br>
 Star Wars the High Republic - The Rising Storm - Cavan Scott - 15H 36M (Queue - Current Audiobooks)<br>
@@ -724,9 +726,9 @@ Shogun - James Clavell - 53H 48M (Queue - Current Audiobooks)<br>
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 173 books - 2244H 26M / 93D 12H 26M<br>
+Queue - Current Audiobooks - 172 books - 2236H 55M / 93D 4H 55M<br>
 Queue - Audible Audiobooks - 33 books - 507H 6M / 21D 3H 6M<br>
-Completed in 2021 - 45 books - 429H 48M / 17D 21H 48M<br>
+Completed in 2021 - 46 books - 437H 19M / 18D 5H 19M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -738,28 +740,28 @@ Completed in 2013 - 38 books - 436H 51M / 18D 4H 51M<br>
 Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
 Book Reserve - Comic Trades - 118 books - 734H 29M / 30D 14H 29M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
-Book Reserve - Audiobooks - 440 books - 5988H 58M / 249D 12H 58M<br>
+Book Reserve - Audiobooks - 443 books - 6028H 55M / 251D 4H 55M<br>
  <br>
 Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-206 queued items: 2751H 32M / 114D 15H 32M<br>
+205 queued items: 2744H 1M / 114D 8H 1M<br>
 0 reserve titles are marked as high priority<br>
-25.65% of reserve items are queued<br>
+25.47% of reserve items are queued<br>
  <br>
-All books included in this report: 1181 titles - 14229H 56M / 592D 21H 56M<br>
+All books included in this report: 1184 titles - 14269H 53M / 594D 13H 53M<br>
 Records not found in the lookup file: 0<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 378 titles - 4207H 36M / 175D 7H 36M<br>
-Total remaining in queue and reserve: 803 titles - 10022H 19M / 417D 14H 19M<br>
-Average completed per year: 44.0 titles - 490H 13M / 20D 10H 13M<br>
+Total completed since 01/01/2013: 379 titles - 4215H 7M / 175D 15H 7M<br>
+Total remaining in queue and reserve: 805 titles - 10054H 46M / 418D 22H 46M<br>
+Average completed per year: 44.1 titles - 490H 56M / 20D 10H 56M<br>
 Remaining years of reserve material at average yearly pace: 18.3<br>
-Remaining years of reserve material at current year pace: 10.6<br>
+Remaining years of reserve material at current year pace: 10.3<br>
  <br>
-Total time to process all reports: 00:00:01.551 (1.551 seconds)<br>
-Total time including file writes: 00:00:01.551 (1.551 seconds)
+Total time to process all reports: 00:00:04.483 (4.483 seconds)<br>
+Total time including file writes: 00:00:04.483 (4.483 seconds)
 </div>
 </body>
 </html>
