book report content update Tue 08/03/2021

--- a/report/media/index.html
+++ b/report/media/index.html
@@ -348,6 +348,46 @@ Season 2<!-- 8 episodes -->
 </td></tr>
 </table><br>
 
+<table style="width:100%">
+<tr><td>
+The Boys<!-- 3 seasons -->
+</td></tr>
+<tr><td>
+Season 1<!-- 8 episodes -->
+<img src="checked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+</td></tr>
+<tr><td>
+Season 2<!-- 9 episodes -->
+<img src="unchecked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+</td></tr>
+<tr><td>
+Season 3<!-- 8 episodes -->
+<img src="unchecked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+</td></tr>
+</table><br>
+
 </div>
 </body>
 </html>
