--- a/report/books/Reserved_books_sorted_by_name.html
+++ b/report/books/Reserved_books_sorted_by_name.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by name - 08/03/2021 06:00<br>
+Reserved books sorted by name - 08/03/2021 14:33<br>
 -----------------------------------------------------<br>
  <br>
-805 books<br>
+806 books<br>
  <br>
 1-2-3 Magic - Thomas Phelan - 7H 3M (Book Reserve - Audiobooks)<br>
 112263 - Stephen King - 30H 46M (Queue - Current Audiobooks)<br>
@@ -296,6 +296,7 @@ How to Fall Forever (Black Science) - 4H 43M (Book Reserve - Comic Trades)<br>
 How to Raise Kids Who Aren't Assholes - Melinda Wenner Moyer - 8H 19M (Queue - Current Audiobooks)<br>
 How to Raise an Adult - Julie Lythcott-Haims - 12H 35M (Book Reserve - Audiobooks)<br>
 How to Talk So Little Kids Will Listen - Joanna Faber - 10H 10M (Book Reserve - Audiobooks)<br>
+How to Talk When Kids Won't Listen - Joanna Faber - 8H 56M (Queue - Current Audiobooks)<br>
 Human Hacking - Christopher Hadnagy - 8H 33M (Queue - Current Audiobooks)<br>
 Hyperfocus - Chris Bailey - 6H 41M (Queue - Current Audiobooks)<br>
 I Am Legend and Other Stories - Richard Matheson - 10H 54M (Book Reserve - Audiobooks)<br>
@@ -822,7 +823,7 @@ Zones of Thought 3 - The Children of the Sky - Vernor Vinge - 26H 56M (Book Rese
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 172 books - 2236H 55M / 93D 4H 55M<br>
+Queue - Current Audiobooks - 173 books - 2245H 51M / 93D 13H 51M<br>
 Queue - Audible Audiobooks - 33 books - 507H 6M / 21D 3H 6M<br>
 Completed in 2021 - 46 books - 437H 19M / 18D 5H 19M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
@@ -842,22 +843,22 @@ Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-205 queued items: 2744H 1M / 114D 8H 1M<br>
+206 queued items: 2752H 57M / 114D 16H 57M<br>
 0 reserve titles are marked as high priority<br>
-25.47% of reserve items are queued<br>
+25.56% of reserve items are queued<br>
  <br>
-All books included in this report: 1184 titles - 14269H 53M / 594D 13H 53M<br>
-Records not found in the lookup file: 0<br>
+All books included in this report: 1185 titles - 14278H 49M / 594D 22H 49M<br>
+Records not found in the lookup file: 1<br>
 No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 379 titles - 4215H 7M / 175D 15H 7M<br>
-Total remaining in queue and reserve: 805 titles - 10054H 46M / 418D 22H 46M<br>
+Total remaining in queue and reserve: 806 titles - 10063H 42M / 419D 7H 42M<br>
 Average completed per year: 44.1 titles - 490H 56M / 20D 10H 56M<br>
 Remaining years of reserve material at average yearly pace: 18.3<br>
 Remaining years of reserve material at current year pace: 10.3<br>
  <br>
-Total time to process all reports: 00:00:04.483 (4.483 seconds)<br>
-Total time including file writes: 00:00:04.483 (4.483 seconds)
+Total time to process all reports: 00:00:03.288 (3.288 seconds)<br>
+Total time including file writes: 00:00:03.288 (3.288 seconds)
 </div>
 </body>
 </html>
