book and media report content update Tue 08/03/2021

--- a/report/media/index.html
+++ b/report/media/index.html
@@ -350,7 +350,7 @@ Season 2<!-- 8 episodes -->
 
 <table style="width:100%">
 <tr><td>
-The Boys<!-- 3 seasons -->
+Stranger Things<!-- 3 seasons -->
 </td></tr>
 <tr><td>
 Season 1<!-- 8 episodes -->
