--- a/report/media/index.html
+++ b/report/media/index.html
@@ -369,10 +369,10 @@ Season 2<!-- 9 episodes -->
 </td></tr>
 <tr><td>
 Season 3<!-- 8 episodes -->
-<img src="checked.png">
-<img src="checked.png">
-<img src="checked.png">
-<img src="checked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
 <img src="unchecked.png">
 <img src="unchecked.png">
 <img src="unchecked.png">
