--- a/report/books/All_books_sorted_by_name.html
+++ b/report/books/All_books_sorted_by_name.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="content">
-All books sorted by name - 08/03/2021 16:02<br>
+All books sorted by name - 08/03/2021 16:06<br>
 -----------------------------------------------------<br>
  <br>
 1185 books<br>
@@ -1236,8 +1236,8 @@ Average completed per year: 44.1 titles - 490H 56M / 20D 10H 56M<br>
 Remaining years of reserve material at average yearly pace: 18.3<br>
 Remaining years of reserve material at current year pace: 10.3<br>
  <br>
-Total time to process all reports: 00:00:03..65 (3.65 seconds)<br>
-Total time including file writes: 00:00:03..65 (3.65 seconds)
+Total time to process all reports: 00:00:03.269 (3.269 seconds)<br>
+Total time including file writes: 00:00:03..27 (3.27 seconds)
 </div>
 </body>
 </html>
