book and media report content update Wed 08/04/2021

--- a/report/books/Reserved_books_sorted_by_length.html
+++ b/report/books/Reserved_books_sorted_by_length.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by length - 08/04/2021 06:00<br>
+Reserved books sorted by length - 08/04/2021 10:30<br>
 -----------------------------------------------------<br>
  <br>
-806 books<br>
+807 books<br>
  <br>
 Art of War - Sun Tzu - 1H 16M (Queue - Audible Audiobooks)<br>
 Fantastic Beasts and Where to Find Them - J. K. Rowling - 1H 54M (Queue - Current Audiobooks)<br>
@@ -185,6 +185,7 @@ Changing Planes - Ursula K. Le Guin - 7H 52M (Book Reserve - Audiobooks)<br>
 Bond 5 - From Russia with Love - Ian Fleming - 7H 55M (Book Reserve - Audiobooks)<br>
 The Decline & Fall of the Roman Empire--Part 1 - Edward Gibbon - 7H 56M (Book Reserve - Audiobooks)<br>
 The Moment of Lift - Melinda Gates - 7H 58M (Queue - Current Audiobooks)<br>
+The Family Firm - Emily Oster - 7H 58M (Queue - Current Audiobooks)<br>
 Cosmic Trilogy 2 - Perelandra - C. S. Lewis - 7H 59M (Book Reserve - Audiobooks)<br>
 Because Internet - Gretchen McCulloch - 8H 2M (Book Reserve - Audiobooks)<br>
 The Stars My Destination - Alfred Bester - 8H 2M (Book Reserve - Audiobooks (Need new source))<br>
@@ -727,7 +728,7 @@ Shogun - James Clavell - 53H 48M (Queue - Current Audiobooks)<br>
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 173 books - 2245H 51M / 93D 13H 51M<br>
+Queue - Current Audiobooks - 174 books - 2253H 50M / 93D 21H 50M<br>
 Queue - Audible Audiobooks - 33 books - 507H 6M / 21D 3H 6M<br>
 Completed in 2021 - 46 books - 437H 19M / 18D 5H 19M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
@@ -747,22 +748,22 @@ Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-206 queued items: 2752H 57M / 114D 16H 57M<br>
+207 queued items: 2760H 56M / 115D 0H 56M<br>
 0 reserve titles are marked as high priority<br>
-25.56% of reserve items are queued<br>
+25.65% of reserve items are queued<br>
  <br>
-All books included in this report: 1185 titles - 14278H 49M / 594D 22H 49M<br>
-Records not found in the lookup file: 0<br>
+All books included in this report: 1186 titles - 14286H 48M / 595D 6H 48M<br>
+Records not found in the lookup file: 1<br>
 No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 379 titles - 4215H 7M / 175D 15H 7M<br>
-Total remaining in queue and reserve: 806 titles - 10063H 42M / 419D 7H 42M<br>
+Total remaining in queue and reserve: 807 titles - 10071H 41M / 419D 15H 41M<br>
 Average completed per year: 44.1 titles - 490H 46M / 20D 10H 46M<br>
 Remaining years of reserve material at average yearly pace: 18.3<br>
 Remaining years of reserve material at current year pace: 10.5<br>
  <br>
-Total time to process all reports: 00:00:02.252 (2.252 seconds)<br>
-Total time including file writes: 00:00:02.253 (2.253 seconds)
+Total time to process all reports: 00:00:03.229 (3.229 seconds)<br>
+Total time including file writes: 00:00:03.229 (3.229 seconds)
 </div>
 </body>
 </html>
