--- a/report/media/index.html
+++ b/report/media/index.html
@@ -380,6 +380,21 @@ Season 3<!-- 8 episodes -->
 </td></tr>
 </table><br>
 
+<table style="width:100%">
+<tr><td>
+The Wheel of Time<!-- 1 season -->
+</td></tr>
+<tr><td>
+Season 1<!-- 6 episodes -->
+<img src="unchecked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+</td></tr>
+</table><br>
+
 </div>
 </body>
 </html>
