--- a/report/books/Reserved_books_sorted_by_folder.html
+++ b/report/books/Reserved_books_sorted_by_folder.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by folder - 08/04/2021 06:00<br>
+Reserved books sorted by folder - 08/04/2021 10:30<br>
 -----------------------------------------------------<br>
  <br>
-Queue - Current Audiobooks : 173 books - 2245H 51M / 93D 13H 51M<br>
+Queue - Current Audiobooks : 174 books - 2253H 50M / 93D 21H 50M<br>
  <br>
 112263 - Stephen King - 30H 46M<br>
 13 Things Mentally Strong Parents Don't Do - Amy Morin - 10H 13M<br>
@@ -125,6 +125,7 @@ The Denial of Death - Ernest Becker - 11H 49M<br>
 The Dresden Files 09 - White Night - Jim Butcher - 14H 18M<br>
 The Dresden Files 10 - Small Favor - Jim Butcher - 13H 52M<br>
 The Dresden Files 11 - Turn Coat - Jim Butcher - 14H 39M<br>
+The Family Firm - Emily Oster - 7H 58M<br>
 The First Fifteen Lives of Harry August - Claire North - 12H 13M<br>
 The Gene - Siddhartha Mukherjee - 19H 28M<br>
 The Gift of Fear - Gavin De Becker - 12H 38M<br>
@@ -844,7 +845,7 @@ Zones of Thought 3 - The Children of the Sky - Vernor Vinge - 26H 56M<br>
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 173 books - 2245H 51M / 93D 13H 51M<br>
+Queue - Current Audiobooks - 174 books - 2253H 50M / 93D 21H 50M<br>
 Queue - Audible Audiobooks - 33 books - 507H 6M / 21D 3H 6M<br>
 Completed in 2021 - 46 books - 437H 19M / 18D 5H 19M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
@@ -864,22 +865,22 @@ Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-206 queued items: 2752H 57M / 114D 16H 57M<br>
+207 queued items: 2760H 56M / 115D 0H 56M<br>
 0 reserve titles are marked as high priority<br>
-25.56% of reserve items are queued<br>
+25.65% of reserve items are queued<br>
  <br>
-All books included in this report: 1185 titles - 14278H 49M / 594D 22H 49M<br>
-Records not found in the lookup file: 0<br>
+All books included in this report: 1186 titles - 14286H 48M / 595D 6H 48M<br>
+Records not found in the lookup file: 1<br>
 No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 379 titles - 4215H 7M / 175D 15H 7M<br>
-Total remaining in queue and reserve: 806 titles - 10063H 42M / 419D 7H 42M<br>
+Total remaining in queue and reserve: 807 titles - 10071H 41M / 419D 15H 41M<br>
 Average completed per year: 44.1 titles - 490H 46M / 20D 10H 46M<br>
 Remaining years of reserve material at average yearly pace: 18.3<br>
 Remaining years of reserve material at current year pace: 10.5<br>
  <br>
-Total time to process all reports: 00:00:02.252 (2.252 seconds)<br>
-Total time including file writes: 00:00:02.253 (2.253 seconds)
+Total time to process all reports: 00:00:03.229 (3.229 seconds)<br>
+Total time including file writes: 00:00:03.229 (3.229 seconds)
 </div>
 </body>
 </html>
