--- a/report/books/Reserved_books_sorted_by_name.html
+++ b/report/books/Reserved_books_sorted_by_name.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by name - 08/04/2021 06:00<br>
+Reserved books sorted by name - 08/04/2021 10:30<br>
 -----------------------------------------------------<br>
  <br>
-806 books<br>
+807 books<br>
  <br>
 1-2-3 Magic - Thomas Phelan - 7H 3M (Book Reserve - Audiobooks)<br>
 112263 - Stephen King - 30H 46M (Queue - Current Audiobooks)<br>
@@ -597,6 +597,7 @@ The Fall of Shannara 2 - The Skaar Invasion - Terry Brooks - 12H 46M (Book Reser
 The Fall of Shannara 3 - The Stiehl Assassin - Terry Brooks - 11H 32M (Book Reserve - Audiobooks)<br>
 The Fall of Shannara 4 - The Last Druid - Terry Brooks - 15H 9M (Book Reserve - Audiobooks)<br>
 The Fall of the House of Usher and other tales - Edgar Allan Poe - 4H 53M (Book Reserve - Audiobooks)<br>
+The Family Firm - Emily Oster - 7H 58M (Queue - Current Audiobooks)<br>
 The First Fifteen Lives of Harry August - Claire North - 12H 13M (Queue - Current Audiobooks)<br>
 The Future of Feeling - Building Empathy in a Tech-Obsessed World - Kaitlin Ugolik Phillips - 7H 22M (Book Reserve - Physical and Kindle Books)<br>
 The Future of Humanity - Michio Kaku - 12H 25M (Book Reserve - Audiobooks)<br>
@@ -823,7 +824,7 @@ Zones of Thought 3 - The Children of the Sky - Vernor Vinge - 26H 56M (Book Rese
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 173 books - 2245H 51M / 93D 13H 51M<br>
+Queue - Current Audiobooks - 174 books - 2253H 50M / 93D 21H 50M<br>
 Queue - Audible Audiobooks - 33 books - 507H 6M / 21D 3H 6M<br>
 Completed in 2021 - 46 books - 437H 19M / 18D 5H 19M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
@@ -843,22 +844,22 @@ Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-206 queued items: 2752H 57M / 114D 16H 57M<br>
+207 queued items: 2760H 56M / 115D 0H 56M<br>
 0 reserve titles are marked as high priority<br>
-25.56% of reserve items are queued<br>
+25.65% of reserve items are queued<br>
  <br>
-All books included in this report: 1185 titles - 14278H 49M / 594D 22H 49M<br>
-Records not found in the lookup file: 0<br>
+All books included in this report: 1186 titles - 14286H 48M / 595D 6H 48M<br>
+Records not found in the lookup file: 1<br>
 No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 379 titles - 4215H 7M / 175D 15H 7M<br>
-Total remaining in queue and reserve: 806 titles - 10063H 42M / 419D 7H 42M<br>
+Total remaining in queue and reserve: 807 titles - 10071H 41M / 419D 15H 41M<br>
 Average completed per year: 44.1 titles - 490H 46M / 20D 10H 46M<br>
 Remaining years of reserve material at average yearly pace: 18.3<br>
 Remaining years of reserve material at current year pace: 10.5<br>
  <br>
-Total time to process all reports: 00:00:02.252 (2.252 seconds)<br>
-Total time including file writes: 00:00:02.253 (2.253 seconds)
+Total time to process all reports: 00:00:03.229 (3.229 seconds)<br>
+Total time including file writes: 00:00:03.229 (3.229 seconds)
 </div>
 </body>
 </html>
