Added book image reports

--- a/report/books/Completed_books_sorted_by_length.html
+++ b/report/books/Completed_books_sorted_by_length.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by length - 08/04/2021 10:30<br>
+Completed books sorted by length - 08/04/2021 14:52<br>
 -----------------------------------------------------<br>
  <br>
-379 books<br>
+380 books<br>
  <br>
 Shadow War of the Night Dragons 1 -The Dead City - Prologue - John Scalzi - 0H 21M (Completed in 2014)<br>
 Gratitude - Oliver Sacks - 0H 36M (Completed in 2020)<br>
@@ -67,7 +67,7 @@ Narnia 1 - Magicians Nephew - C. S. Lewis - 3H 58M (Completed in 2020)<br>
 Rosencrantz and Guildenstern Are Dead - Tom Stoppard - 3H 59M (Completed in 2019)<br>
 The Wonderful Wizard of Oz - L. Frank Baum - 3H 59M (Completed in 2018)<br>
 Don't Sweat the Small Stuff...And It's All Small - Richard Carlson - 4H 3M (Completed in 2019)<br>
-This Census-Taker - China Miéville - 4H 3M (Completed in 2020)<br>
+This Census-Taker - China MiÃ©ville - 4H 3M (Completed in 2020)<br>
 Nightflyers - George R. R. Martin - 4H 5M (Completed in 2019)<br>
 Dragons at Crumbling Castle - Terry Pratchett - 4H 10M (Completed in 2017)<br>
 Rocket Raccoon & Groot Vol. 1 Tricks of the Trade - 4H 14M (Completed in 2020)<br>
@@ -381,7 +381,7 @@ Summary Report<br>
 Folder totals<br>
 Queue - Current Audiobooks - 174 books - 2253H 50M / 93D 21H 50M<br>
 Queue - Audible Audiobooks - 33 books - 507H 6M / 21D 3H 6M<br>
-Completed in 2021 - 46 books - 437H 19M / 18D 5H 19M<br>
+Completed in 2021 - 47 books - 441H 47M / 18D 9H 47M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -391,7 +391,7 @@ Completed in 2015 - 37 books - 457H 16M / 19D 1H 16M<br>
 Completed in 2014 - 27 books - 479H 44M / 19D 23H 44M<br>
 Completed in 2013 - 38 books - 436H 51M / 18D 4H 51M<br>
 Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
-Book Reserve - Comic Trades - 118 books - 734H 29M / 30D 14H 29M<br>
+Book Reserve - Comic Trades - 117 books - 730H 1M / 30D 10H 1M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
 Book Reserve - Audiobooks - 443 books - 6028H 55M / 251D 4H 55M<br>
  <br>
@@ -401,20 +401,20 @@ Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
 207 queued items: 2760H 56M / 115D 0H 56M<br>
 0 reserve titles are marked as high priority<br>
-25.65% of reserve items are queued<br>
+25.68% of reserve items are queued<br>
  <br>
 All books included in this report: 1186 titles - 14286H 48M / 595D 6H 48M<br>
-Records not found in the lookup file: 1<br>
+Records not found in the lookup file: 0<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 379 titles - 4215H 7M / 175D 15H 7M<br>
-Total remaining in queue and reserve: 807 titles - 10071H 41M / 419D 15H 41M<br>
-Average completed per year: 44.1 titles - 490H 46M / 20D 10H 46M<br>
-Remaining years of reserve material at average yearly pace: 18.3<br>
-Remaining years of reserve material at current year pace: 10.5<br>
+Total completed since 01/01/2013: 380 titles - 4219H 35M / 175D 19H 35M<br>
+Total remaining in queue and reserve: 806 titles - 10067H 13M / 419D 11H 13M<br>
+Average completed per year: 44.2 titles - 491H 17M / 20D 11H 17M<br>
+Remaining years of reserve material at average yearly pace: 18.2<br>
+Remaining years of reserve material at current year pace: 10.2<br>
  <br>
-Total time to process all reports: 00:00:03.229 (3.229 seconds)<br>
-Total time including file writes: 00:00:03.229 (3.229 seconds)
+Total time to process all reports: 00:00:01.394 (1.394 seconds)<br>
+Total time including file writes: 00:00:01.395 (1.395 seconds)
 </div>
 </body>
 </html>
