--- a/report/books/sanderstatus.html
+++ b/report/books/sanderstatus.html
@@ -7,11 +7,16 @@
 </head>
 <body>
 <div class="content">
-Progress bars collected from from brandonsanderson.com on 2021-08-04<br><br>
+Progress bars collected from from brandonsanderson.com on 2021-08-04<br>
+<br>
 Cytonic 1st Proofread 100%<br>
+<br>
 Wax & Wayne Book 4 (Mistborn 7) 94%<br>
+<br>
 ReDawn (Skyward Novella 2) Draft 3.0 100%<br>
+<br>
 Evershore (Skyward Novella 3) Draft 1.0 100%<br>
+<br>
 </div>
 </body>
 </html>
