--- a/report/books/Completed_books_sorted_by_folder.html
+++ b/report/books/Completed_books_sorted_by_folder.html
@@ -7,14 +7,14 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by folder - 08/04/2021 10:30<br>
+Completed books sorted by folder - 08/04/2021 14:52<br>
 -----------------------------------------------------<br>
  <br>
-Completed in 2021 : 46 books - 437H 19M / 18D 5H 19M<br>
-Total Comic Trades : 18<br>
-Average book length : 9H 30M<br>
-Hours read per week : 14H 10M<br>
-On pace to complete 77 books (739H 25M / 30D 19H 25M) by the end of 2021<br>
+Completed in 2021 : 47 books - 441H 47M / 18D 9H 47M<br>
+Total Comic Trades : 19<br>
+Average book length : 9H 23M<br>
+Hours read per week : 14H 19M<br>
+On pace to complete 79 books (747H 2M / 31D 3H 2M) by the end of 2021<br>
  <br>
 21 Lessons for the 21st Century - Yuval Noah Harari - 11H 44M<br>
 A People's History of the United States - Howard Zinn - 34H 19M<br>
@@ -39,6 +39,7 @@ Expanse Novella 7.5 - Auberon - James S. A. Corey - 2H 25M<br>
 Harley Quinn Black + White + Red - 7H 13M<br>
 Homo Deus - A Brief History of Tomorrow - Yuval Noah Harari - 14H 58M<br>
 House Of M Ultimate Edition - 6H 28M<br>
+Marvel Comics 1000 - 4H 28M<br>
 Moon Knight Legacy vol 2 - 3H 29M<br>
 Outliers - Malcolm Gladwell - 7H 19M<br>
 Rick and Morty Dungeons and Dragons - 4H 28M<br>
@@ -160,7 +161,7 @@ The Sixth Extinction - An Unnatural History - Elizabeth Kolbert - 9H 59M<br>
 The Subtle Art of Not Giving a Fck - Mark Manson - 5H 18M<br>
 The Unbeatable Squirrel Girl Vol. 1 Squirrel Power - 3H 59M<br>
 Thinking, Fast and Slow - Daniel Kahneman - 20H 7M<br>
-This Census-Taker - China Miéville - 4H 3M<br>
+This Census-Taker - China MiÃ©ville - 4H 3M<br>
 White Sand vol 1 - Brandon Sanderson - 4H 57M<br>
 Wisdom of Crowds - James Surowiecki - 9H 33M<br>
 You Have Arrived at Your Destination - Amor Towles - 1H 22M<br>
@@ -451,7 +452,7 @@ Summary Report<br>
 Folder totals<br>
 Queue - Current Audiobooks - 174 books - 2253H 50M / 93D 21H 50M<br>
 Queue - Audible Audiobooks - 33 books - 507H 6M / 21D 3H 6M<br>
-Completed in 2021 - 46 books - 437H 19M / 18D 5H 19M<br>
+Completed in 2021 - 47 books - 441H 47M / 18D 9H 47M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -461,7 +462,7 @@ Completed in 2015 - 37 books - 457H 16M / 19D 1H 16M<br>
 Completed in 2014 - 27 books - 479H 44M / 19D 23H 44M<br>
 Completed in 2013 - 38 books - 436H 51M / 18D 4H 51M<br>
 Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
-Book Reserve - Comic Trades - 118 books - 734H 29M / 30D 14H 29M<br>
+Book Reserve - Comic Trades - 117 books - 730H 1M / 30D 10H 1M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
 Book Reserve - Audiobooks - 443 books - 6028H 55M / 251D 4H 55M<br>
  <br>
@@ -471,20 +472,20 @@ Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
 207 queued items: 2760H 56M / 115D 0H 56M<br>
 0 reserve titles are marked as high priority<br>
-25.65% of reserve items are queued<br>
+25.68% of reserve items are queued<br>
  <br>
 All books included in this report: 1186 titles - 14286H 48M / 595D 6H 48M<br>
-Records not found in the lookup file: 1<br>
+Records not found in the lookup file: 0<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 379 titles - 4215H 7M / 175D 15H 7M<br>
-Total remaining in queue and reserve: 807 titles - 10071H 41M / 419D 15H 41M<br>
-Average completed per year: 44.1 titles - 490H 46M / 20D 10H 46M<br>
-Remaining years of reserve material at average yearly pace: 18.3<br>
-Remaining years of reserve material at current year pace: 10.5<br>
+Total completed since 01/01/2013: 380 titles - 4219H 35M / 175D 19H 35M<br>
+Total remaining in queue and reserve: 806 titles - 10067H 13M / 419D 11H 13M<br>
+Average completed per year: 44.2 titles - 491H 17M / 20D 11H 17M<br>
+Remaining years of reserve material at average yearly pace: 18.2<br>
+Remaining years of reserve material at current year pace: 10.2<br>
  <br>
-Total time to process all reports: 00:00:03.229 (3.229 seconds)<br>
-Total time including file writes: 00:00:03.229 (3.229 seconds)
+Total time to process all reports: 00:00:01.394 (1.394 seconds)<br>
+Total time including file writes: 00:00:01.395 (1.395 seconds)
 </div>
 </body>
 </html>
