--- a/report/books/Reserved_books_sorted_by_folder.html
+++ b/report/books/Reserved_books_sorted_by_folder.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by folder - 08/04/2021 10:30<br>
+Reserved books sorted by folder - 08/04/2021 14:52<br>
 -----------------------------------------------------<br>
  <br>
 Queue - Current Audiobooks : 174 books - 2253H 50M / 93D 21H 50M<br>
@@ -125,7 +125,7 @@ The Denial of Death - Ernest Becker - 11H 49M<br>
 The Dresden Files 09 - White Night - Jim Butcher - 14H 18M<br>
 The Dresden Files 10 - Small Favor - Jim Butcher - 13H 52M<br>
 The Dresden Files 11 - Turn Coat - Jim Butcher - 14H 39M<br>
-The Family Firm - Emily Oster - 7H 58M<br>
+The Family Firm - A Data-Driven Guide to Better Decision Making in the Early School Years - Emily Oster - 7H 58M<br>
 The First Fifteen Lives of Harry August - Claire North - 12H 13M<br>
 The Gene - Siddhartha Mukherjee - 19H 28M<br>
 The Gift of Fear - Gavin De Becker - 12H 38M<br>
@@ -172,7 +172,7 @@ Ultralearning - Scott Young - 7H 48M<br>
 Until the End of Time - Brian Greene - 14H 40M<br>
 Unwinding Anxiety - Judson Brewer - 7H 23M<br>
 Uprooted - Naomi Novik - 17H 49M<br>
-VocabuLearn® German Complete - 9H 2M<br>
+VocabuLearnÂ® German Complete - 9H 2M<br>
 Wayfarers 1 - The Long Way to a Small, Angry Planet - Becky Chambers - 14H 27M<br>
 We - Yevgeny Zamyatin - 6H 53M<br>
 We Have Always Lived in the Castle - Shirley Jackson - 5H 34M<br>
@@ -244,8 +244,8 @@ The Time Traveler's Almanac - A Time Travel Anthology - Jeff VanderMeer - 29H 53
 Tuf Voyaging - George R. R. Martin - 13H 56M<br>
 -----------------------------------------------------<br>
  <br>
-Book Reserve - Comic Trades : 118 books - 734H 29M / 30D 14H 29M<br>
-Total Comic Trades : 118<br>
+Book Reserve - Comic Trades : 117 books - 730H 1M / 30D 10H 1M<br>
+Total Comic Trades : 117<br>
  <br>
 Absolute Carnage - 6H 13M<br>
 Action Comics 1000 - 4H 58M<br>
@@ -313,7 +313,6 @@ King in Black - 4H 28M<br>
 Lobo Portrait of a Bastich - 6H 28M<br>
 Lumberjanes - 4H 6M<br>
 Martian Manhunter Vol. 1 The Epiphany - 4H 58M<br>
-Marvel Comics 1000 - 4H 28M<br>
 Marvel Infinity - 18H 25M<br>
 Mister Miracle - 9H 57M<br>
 Once & Future Vol. 1 - 4H 58M<br>
@@ -847,7 +846,7 @@ Summary Report<br>
 Folder totals<br>
 Queue - Current Audiobooks - 174 books - 2253H 50M / 93D 21H 50M<br>
 Queue - Audible Audiobooks - 33 books - 507H 6M / 21D 3H 6M<br>
-Completed in 2021 - 46 books - 437H 19M / 18D 5H 19M<br>
+Completed in 2021 - 47 books - 441H 47M / 18D 9H 47M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -857,7 +856,7 @@ Completed in 2015 - 37 books - 457H 16M / 19D 1H 16M<br>
 Completed in 2014 - 27 books - 479H 44M / 19D 23H 44M<br>
 Completed in 2013 - 38 books - 436H 51M / 18D 4H 51M<br>
 Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
-Book Reserve - Comic Trades - 118 books - 734H 29M / 30D 14H 29M<br>
+Book Reserve - Comic Trades - 117 books - 730H 1M / 30D 10H 1M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
 Book Reserve - Audiobooks - 443 books - 6028H 55M / 251D 4H 55M<br>
  <br>
@@ -867,20 +866,20 @@ Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
 207 queued items: 2760H 56M / 115D 0H 56M<br>
 0 reserve titles are marked as high priority<br>
-25.65% of reserve items are queued<br>
+25.68% of reserve items are queued<br>
  <br>
 All books included in this report: 1186 titles - 14286H 48M / 595D 6H 48M<br>
-Records not found in the lookup file: 1<br>
+Records not found in the lookup file: 0<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 379 titles - 4215H 7M / 175D 15H 7M<br>
-Total remaining in queue and reserve: 807 titles - 10071H 41M / 419D 15H 41M<br>
-Average completed per year: 44.1 titles - 490H 46M / 20D 10H 46M<br>
-Remaining years of reserve material at average yearly pace: 18.3<br>
-Remaining years of reserve material at current year pace: 10.5<br>
+Total completed since 01/01/2013: 380 titles - 4219H 35M / 175D 19H 35M<br>
+Total remaining in queue and reserve: 806 titles - 10067H 13M / 419D 11H 13M<br>
+Average completed per year: 44.2 titles - 491H 17M / 20D 11H 17M<br>
+Remaining years of reserve material at average yearly pace: 18.2<br>
+Remaining years of reserve material at current year pace: 10.2<br>
  <br>
-Total time to process all reports: 00:00:03.229 (3.229 seconds)<br>
-Total time including file writes: 00:00:03.229 (3.229 seconds)
+Total time to process all reports: 00:00:01.394 (1.394 seconds)<br>
+Total time including file writes: 00:00:01.395 (1.395 seconds)
 </div>
 </body>
 </html>
