--- a/report/books/Reserved_books_sorted_by_name.html
+++ b/report/books/Reserved_books_sorted_by_name.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by name - 08/04/2021 10:30<br>
+Reserved books sorted by name - 08/04/2021 14:52<br>
 -----------------------------------------------------<br>
  <br>
-807 books<br>
+806 books<br>
  <br>
 1-2-3 Magic - Thomas Phelan - 7H 3M (Book Reserve - Audiobooks)<br>
 112263 - Stephen King - 30H 46M (Queue - Current Audiobooks)<br>
@@ -370,7 +370,6 @@ Mars trilogy 1 - Red Mars - Kim Stanley Robinson - 23H 4M (Queue - Current Audio
 Mars trilogy 2 - Green Mars - Kim Stanley Robinson - 26H 41M (Book Reserve - Audiobooks)<br>
 Mars trilogy 3 - Blue Mars - Kim Stanley Robinson - 30H 54M (Book Reserve - Audiobooks)<br>
 Martian Manhunter Vol. 1 The Epiphany - 4H 58M (Book Reserve - Comic Trades)<br>
-Marvel Comics 1000 - 4H 28M (Book Reserve - Comic Trades)<br>
 Marvel Infinity - 18H 25M (Book Reserve - Comic Trades)<br>
 Mary Poppins - P. L. Travers - 3H 51M (Queue - Current Audiobooks)<br>
 Master & Apprentice  (Star Wars) - Claudia Gray - 11H 45M (Queue - Current Audiobooks)<br>
@@ -597,7 +596,7 @@ The Fall of Shannara 2 - The Skaar Invasion - Terry Brooks - 12H 46M (Book Reser
 The Fall of Shannara 3 - The Stiehl Assassin - Terry Brooks - 11H 32M (Book Reserve - Audiobooks)<br>
 The Fall of Shannara 4 - The Last Druid - Terry Brooks - 15H 9M (Book Reserve - Audiobooks)<br>
 The Fall of the House of Usher and other tales - Edgar Allan Poe - 4H 53M (Book Reserve - Audiobooks)<br>
-The Family Firm - Emily Oster - 7H 58M (Queue - Current Audiobooks)<br>
+The Family Firm - A Data-Driven Guide to Better Decision Making in the Early School Years - Emily Oster - 7H 58M (Queue - Current Audiobooks)<br>
 The First Fifteen Lives of Harry August - Claire North - 12H 13M (Queue - Current Audiobooks)<br>
 The Future of Feeling - Building Empathy in a Tech-Obsessed World - Kaitlin Ugolik Phillips - 7H 22M (Book Reserve - Physical and Kindle Books)<br>
 The Future of Humanity - Michio Kaku - 12H 25M (Book Reserve - Audiobooks)<br>
@@ -774,7 +773,7 @@ Uprooted - Naomi Novik - 17H 49M (Queue - Current Audiobooks)<br>
 VALIS - Philip K Dick - 8H 44M (Book Reserve - Audiobooks (Need new source))<br>
 Venomverse - 3H 59M (Book Reserve - Comic Trades)<br>
 Venus Plus X - Theodore Sturgeon - 6H 28M (Book Reserve - Audiobooks)<br>
-VocabuLearn® German Complete - 9H 2M (Queue - Current Audiobooks)<br>
+VocabuLearnÂ® German Complete - 9H 2M (Queue - Current Audiobooks)<br>
 War Machine - Volume 1 Iron Heart - 4H 14M (Book Reserve - Comic Trades)<br>
 Way Station (Here Gather the Stars) - Clifford Simak - 7H 1M (Book Reserve - Audiobooks (Need new source))<br>
 Wayfarers 1 - The Long Way to a Small, Angry Planet - Becky Chambers - 14H 27M (Queue - Current Audiobooks)<br>
@@ -826,7 +825,7 @@ Summary Report<br>
 Folder totals<br>
 Queue - Current Audiobooks - 174 books - 2253H 50M / 93D 21H 50M<br>
 Queue - Audible Audiobooks - 33 books - 507H 6M / 21D 3H 6M<br>
-Completed in 2021 - 46 books - 437H 19M / 18D 5H 19M<br>
+Completed in 2021 - 47 books - 441H 47M / 18D 9H 47M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -836,7 +835,7 @@ Completed in 2015 - 37 books - 457H 16M / 19D 1H 16M<br>
 Completed in 2014 - 27 books - 479H 44M / 19D 23H 44M<br>
 Completed in 2013 - 38 books - 436H 51M / 18D 4H 51M<br>
 Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
-Book Reserve - Comic Trades - 118 books - 734H 29M / 30D 14H 29M<br>
+Book Reserve - Comic Trades - 117 books - 730H 1M / 30D 10H 1M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
 Book Reserve - Audiobooks - 443 books - 6028H 55M / 251D 4H 55M<br>
  <br>
@@ -846,20 +845,20 @@ Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
 207 queued items: 2760H 56M / 115D 0H 56M<br>
 0 reserve titles are marked as high priority<br>
-25.65% of reserve items are queued<br>
+25.68% of reserve items are queued<br>
  <br>
 All books included in this report: 1186 titles - 14286H 48M / 595D 6H 48M<br>
-Records not found in the lookup file: 1<br>
+Records not found in the lookup file: 0<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 379 titles - 4215H 7M / 175D 15H 7M<br>
-Total remaining in queue and reserve: 807 titles - 10071H 41M / 419D 15H 41M<br>
-Average completed per year: 44.1 titles - 490H 46M / 20D 10H 46M<br>
-Remaining years of reserve material at average yearly pace: 18.3<br>
-Remaining years of reserve material at current year pace: 10.5<br>
+Total completed since 01/01/2013: 380 titles - 4219H 35M / 175D 19H 35M<br>
+Total remaining in queue and reserve: 806 titles - 10067H 13M / 419D 11H 13M<br>
+Average completed per year: 44.2 titles - 491H 17M / 20D 11H 17M<br>
+Remaining years of reserve material at average yearly pace: 18.2<br>
+Remaining years of reserve material at current year pace: 10.2<br>
  <br>
-Total time to process all reports: 00:00:03.229 (3.229 seconds)<br>
-Total time including file writes: 00:00:03.229 (3.229 seconds)
+Total time to process all reports: 00:00:01.394 (1.394 seconds)<br>
+Total time including file writes: 00:00:01.395 (1.395 seconds)
 </div>
 </body>
 </html>
