Update book landing page formatting

--- a/report/books/index.html
+++ b/report/books/index.html
@@ -33,6 +33,10 @@
 <body>
 <div class="content">
     <BR>
+    <BR>
+<a href="2020_book_images.html">2020 Book Images</a><BR>
+<a href="2021_book_images.html">2021 Book Images</a><BR>
+    <BR>
 <a href="Completed_books_sorted_by_folder.html">Completed Books by Year</a><BR>
 <a href="Completed_books_sorted_by_length.html">Completed Books by Length</a><BR>
 <a href="Completed_books_sorted_by_name.html">Completed Books by Name</a><BR>
@@ -46,10 +50,7 @@
     <BR>
 <a href="All_books_sorted_by_name.html">All Books by Name</a><BR>
     <BR>
-<a href="sanderstatus.html">Sanderstatus</a><BR>
-    <BR>
-<a href="2020_book_images.html">2020 Book Images</a><BR>
-<a href="2021_book_images.html">2021 Book Images</a>
+<a href="sanderstatus.html">Brandon Sanderson Status Report</a><BR>
 </div>
 </body>
 </html>
