book and media report content update Thu 08/05/2021

--- a/report/books/Reserved_books_sorted_by_length.html
+++ b/report/books/Reserved_books_sorted_by_length.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by length - 08/04/2021 14:52<br>
+Reserved books sorted by length - 08/05/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
 806 books<br>
@@ -244,7 +244,7 @@ Time Quartet 4 - Many Waters - Madeleine L'engle - 8H 57M (Book Reserve - Audiob
 Machineries of Empire 2 - Raven Stratagem - Yoon Ha Lee - 9H 1M (Book Reserve - Physical and Kindle Books)<br>
 Flowers for Algernon - Daniel Keyes - 9H 2M (Book Reserve - Audiobooks)<br>
 Bezonomics - Brian Dumaine - 9H 2M (Book Reserve - Audiobooks)<br>
-VocabuLearnÂ® German Complete - 9H 2M (Queue - Current Audiobooks)<br>
+VocabuLearn® German Complete - 9H 2M (Queue - Current Audiobooks)<br>
 The Uninhabitable Earth - David Wallace-Wells - 9H 2M (Queue - Current Audiobooks)<br>
 The Sirens of Titan - Kurt Vonnegut - 9H 4M (Book Reserve - Audiobooks (Need new source))<br>
 Heir to the Jedi - Kevin Hearne - 9H 4M (Book Reserve - Audiobooks)<br>
@@ -758,12 +758,12 @@ No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 380 titles - 4219H 35M / 175D 19H 35M<br>
 Total remaining in queue and reserve: 806 titles - 10067H 13M / 419D 11H 13M<br>
-Average completed per year: 44.2 titles - 491H 17M / 20D 11H 17M<br>
+Average completed per year: 44.2 titles - 491H 8M / 20D 11H 8M<br>
 Remaining years of reserve material at average yearly pace: 18.2<br>
 Remaining years of reserve material at current year pace: 10.2<br>
  <br>
-Total time to process all reports: 00:00:01.394 (1.394 seconds)<br>
-Total time including file writes: 00:00:01.395 (1.395 seconds)
+Total time to process all reports: 00:00:01.988 (1.988 seconds)<br>
+Total time including file writes: 00:00:01.988 (1.988 seconds)
 </div>
 </body>
 </html>
