--- a/report/books/All_books_sorted_by_name.html
+++ b/report/books/All_books_sorted_by_name.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="content">
-All books sorted by name - 08/04/2021 14:52<br>
+All books sorted by name - 08/05/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
 1186 books<br>
@@ -1091,7 +1091,7 @@ Themis Files 3 - Only Human - Sylvain Neuvel - 8H 46M (Book Reserve - Audiobooks
 They Can't Kill Us All - Wesley Lowery - 8H 12M (Book Reserve - Audiobooks)<br>
 Thinking, Fast and Slow - Daniel Kahneman - 20H 7M (Completed in 2020)<br>
 Thirteen - Richard K. Morgan - 22H 32M (Book Reserve - Audiobooks)<br>
-This Census-Taker - China MiÃ©ville - 4H 3M (Completed in 2020)<br>
+This Census-Taker - China Miéville - 4H 3M (Completed in 2020)<br>
 Thor God of Thunder Reborn vol 1 - 4H 14M (Book Reserve - Comic Trades)<br>
 Thor Vol 1 The Goddess of Thunder - 4H 4M (Book Reserve - Comic Trades)<br>
 Thrawn 1 - Thrawn - Timothy Zahn - 17H 1M (Queue - Current Audiobooks)<br>
@@ -1143,7 +1143,7 @@ VALIS - Philip K Dick - 8H 44M (Book Reserve - Audiobooks (Need new source))<br>
 Venomverse - 3H 59M (Book Reserve - Comic Trades)<br>
 Venus Plus X - Theodore Sturgeon - 6H 28M (Book Reserve - Audiobooks)<br>
 VocabuLearn German Complete - 9H 2M (Completed in 2021)<br>
-VocabuLearnÂ® German Complete - 9H 2M (Queue - Current Audiobooks)<br>
+VocabuLearn® German Complete - 9H 2M (Queue - Current Audiobooks)<br>
 Vote Loki - 3H 44M (Completed in 2021)<br>
 War Machine - Volume 1 Iron Heart - 4H 14M (Book Reserve - Comic Trades)<br>
 Warbreaker - Brandon Sanderson - 25H 18M (Completed in 2019)<br>
@@ -1233,12 +1233,12 @@ No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 380 titles - 4219H 35M / 175D 19H 35M<br>
 Total remaining in queue and reserve: 806 titles - 10067H 13M / 419D 11H 13M<br>
-Average completed per year: 44.2 titles - 491H 17M / 20D 11H 17M<br>
+Average completed per year: 44.2 titles - 491H 8M / 20D 11H 8M<br>
 Remaining years of reserve material at average yearly pace: 18.2<br>
 Remaining years of reserve material at current year pace: 10.2<br>
  <br>
-Total time to process all reports: 00:00:01.394 (1.394 seconds)<br>
-Total time including file writes: 00:00:01.395 (1.395 seconds)
+Total time to process all reports: 00:00:01.988 (1.988 seconds)<br>
+Total time including file writes: 00:00:01.988 (1.988 seconds)
 </div>
 </body>
 </html>
