--- a/report/books/Completed_books_sorted_by_name.html
+++ b/report/books/Completed_books_sorted_by_name.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by name - 08/04/2021 14:52<br>
+Completed books sorted by name - 08/05/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
 380 books<br>
@@ -374,7 +374,7 @@ The Time Machine - H G Wells - 3H 56M (Completed in 2017)<br>
 The Unbeatable Squirrel Girl Vol. 1 Squirrel Power - 3H 59M (Completed in 2020)<br>
 The Wonderful Wizard of Oz - L. Frank Baum - 3H 59M (Completed in 2018)<br>
 Thinking, Fast and Slow - Daniel Kahneman - 20H 7M (Completed in 2020)<br>
-This Census-Taker - China MiÃ©ville - 4H 3M (Completed in 2020)<br>
+This Census-Taker - China Miéville - 4H 3M (Completed in 2020)<br>
 Thrawn Trilogy 1 - Heir to the Empire - Timothy Zahn - 13H 13M (Completed in 2013)<br>
 Thrawn Trilogy 2 - Dark Force Rising - Timothy Zahn - 15H 0M (Completed in 2013)<br>
 Thrawn Trilogy 3 - The Last Command - Timothy Zahn - 15H 51M (Completed in 2014)<br>
@@ -427,12 +427,12 @@ No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 380 titles - 4219H 35M / 175D 19H 35M<br>
 Total remaining in queue and reserve: 806 titles - 10067H 13M / 419D 11H 13M<br>
-Average completed per year: 44.2 titles - 491H 17M / 20D 11H 17M<br>
+Average completed per year: 44.2 titles - 491H 8M / 20D 11H 8M<br>
 Remaining years of reserve material at average yearly pace: 18.2<br>
 Remaining years of reserve material at current year pace: 10.2<br>
  <br>
-Total time to process all reports: 00:00:01.394 (1.394 seconds)<br>
-Total time including file writes: 00:00:01.395 (1.395 seconds)
+Total time to process all reports: 00:00:01.988 (1.988 seconds)<br>
+Total time including file writes: 00:00:01.988 (1.988 seconds)
 </div>
 </body>
 </html>
